[gd_scene load_steps=12 format=3 uid="uid://bngj3gvodihcr"]

[ext_resource type="Theme" uid="uid://bybm5iuhmxeoj" path="res://UI/main_theme.tres" id="1_i2a53"]
[ext_resource type="Script" uid="uid://byw4sjbaek0p6" path="res://UI/MainMenu/main_menu_ui.gd" id="2_3377f"]
[ext_resource type="PackedScene" uid="uid://cphkmluswqy8n" path="res://UI/Credits/credits.tscn" id="3_r7ktl"]
[ext_resource type="Script" uid="uid://c6fo8fmkrj3al" path="res://UI/Components/button_anim_component.gd" id="5_1ti4v"]
[ext_resource type="Script" uid="uid://m20blgxgerfk" path="res://UI/Components/button_focus_component.gd" id="6_7jgpi"]
[ext_resource type="PackedScene" uid="uid://d0ifa53fa0md5" path="res://UI/Components/RateComponent/rate_component.tscn" id="7_mibcb"]
[ext_resource type="Script" uid="uid://b7dw5f4l2jbuv" path="res://UI/MainMenu/wishlist_component.gd" id="8_oyel6"]
[ext_resource type="Texture2D" uid="uid://rbaxlkme85nd" path="res://Misc/Icon.png" id="9_t8yxc"]
[ext_resource type="PackedScene" uid="uid://7eigtoe7o6w4" path="res://Components/RichTextTranslator/rich_text_translator.tscn" id="10_t8yxc"]
[ext_resource type="PackedScene" uid="uid://buwl6jyd0kvgw" path="res://UI/Settings/settings.tscn" id="13_4pnmc"]

[sub_resource type="LabelSettings" id="LabelSettings_424qg"]
font_size = 45
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.596078)
shadow_offset = Vector2(2, 2)

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i2a53")
script = ExtResource("2_3377f")

[node name="DarkenRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.235294, 0.235294, 0.709804)

[node name="Credits" parent="." instance=ExtResource("3_r7ktl")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Settings" parent="." instance=ExtResource("13_4pnmc")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MainMenuComponents" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuComponents"]
layout_mode = 2

[node name="TitleAndMenu" type="Control" parent="MainMenuComponents/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuComponents/HBoxContainer/TitleAndMenu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
offset_right = 489.0
offset_bottom = 87.0
bbcode_enabled = true
text = "[font=res://Misc/Fonts/lexographer.regular.ttf][color=WHITE][font_size=80][outline_size=20][shake rate=20.0 level=5 connected=1]Velocirambo[/shake][/outline_size][/font_size][/color][/font]"
fit_content = true
scroll_active = false

[node name="BtnsContainer" type="VBoxContainer" parent="MainMenuComponents/HBoxContainer/TitleAndMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_right = 300.0
offset_bottom = 902.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="NewGameBtn" type="Button" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NEW_GAME"

[node name="ButtonAnimComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/NewGameBtn"]
script = ExtResource("5_1ti4v")
time = 0.2
pivotPos = 0

[node name="ButtonFocusComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/NewGameBtn"]
script = ExtResource("6_7jgpi")

[node name="SettingsBtn" type="Button" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="ButtonAnimComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/SettingsBtn"]
script = ExtResource("5_1ti4v")
time = 0.2
pivotPos = 0

[node name="ButtonFocusComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/SettingsBtn"]
script = ExtResource("6_7jgpi")

[node name="CreditsBtn" type="Button" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer"]
layout_mode = 2
text = "CREDITS"

[node name="ButtonAnimComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/CreditsBtn"]
script = ExtResource("5_1ti4v")
time = 0.2
pivotPos = 0

[node name="ButtonFocusComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/CreditsBtn"]
script = ExtResource("6_7jgpi")

[node name="QuitBtn" type="Button" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../VBoxContainer/RateComponent")
focus_neighbor_bottom = NodePath("../../../VBoxContainer/RateComponent")
text = "EXIT"

[node name="ButtonAnimComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/QuitBtn"]
script = ExtResource("5_1ti4v")
time = 0.2
pivotPos = 0

[node name="ButtonFocusComponent" type="Node" parent="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/QuitBtn"]
script = ExtResource("6_7jgpi")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuComponents/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="RateComponent" parent="MainMenuComponents/HBoxContainer/VBoxContainer" instance=ExtResource("7_mibcb")]
visible = false
layout_mode = 2

[node name="ButtonAnimComponent" type="Node" parent="MainMenuComponents/HBoxContainer/VBoxContainer/RateComponent"]
script = ExtResource("5_1ti4v")
time = 0.15
size = Vector2(1.1, 1.1)
pivotPos = 2

[node name="ButtonFocusComponent" type="Node" parent="MainMenuComponents/HBoxContainer/VBoxContainer/RateComponent"]
script = ExtResource("6_7jgpi")

[node name="WishlistComponent" type="Button" parent="MainMenuComponents/HBoxContainer/VBoxContainer" node_paths=PackedStringArray("beerIcon")]
custom_minimum_size = Vector2(450, 120)
layout_mode = 2
size_flags_horizontal = 8
keep_pressed_outside = true
script = ExtResource("8_oyel6")
beerIcon = NodePath("BeerIcon")
linkStr = "https://store.steampowered.com/app/3353170/Velocirambo/#game_area_wishlist"

[node name="BeerIcon" type="TextureRect" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -8.0
offset_right = 132.0
offset_bottom = 2.0
grow_vertical = 2
pivot_offset = Vector2(65, 65)
texture = ExtResource("9_t8yxc")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -50.0
offset_right = 217.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent/VBoxContainer"]
layout_mode = 2
text = "WISHLIST_NOW"
label_settings = SubResource("LabelSettings_424qg")

[node name="DinoNugLabel" type="RichTextLabel" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=25][outline_size=8][wave amp=30.0 freq=3.0 connected=1] ? [img=40x40]res://Resources/Sprites/UI/DinoNuggieSmall.png[/img]+5[/wave][/outline_size][/font_size]"
fit_content = true
scroll_active = false

[node name="RichTextTranslator" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent/VBoxContainer/DinoNugLabel" instance=ExtResource("10_t8yxc")]
textForTranslation = "WILL_GIVE_YOU"

[node name="ButtonAnimComponent" type="Node" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent"]
script = ExtResource("5_1ti4v")
time = 0.15
size = Vector2(1.1, 1.1)
metadata/_custom_type_script = "uid://c6fo8fmkrj3al"

[node name="ButtonFocusComponent" type="Node" parent="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent"]
script = ExtResource("6_7jgpi")
metadata/_custom_type_script = "uid://m20blgxgerfk"

[connection signal="pressed" from="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MainMenuComponents/HBoxContainer/TitleAndMenu/BtnsContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent" to="MainMenuComponents/HBoxContainer/VBoxContainer/WishlistComponent" method="_on_pressed"]
